== Version 1.0.0: Not Released ==

Issues Fixed: 119, 136, 139

* Moved hamcrest.php into hamcrest folder and renamed to Hamcrest.php.
  This is more in line with PEAR packaging standards.

* Added Hamcrest_Text_StringContainsIgnoringCase to assert using stripos().

    assertThat('fOObAr', containsStringIgnoringCase('oba'));
    assertThat('fOObAr', containsString('oba')->ignoringCase());

* Fixed Hamcrest_Core_IsInstanceOf to return false for native types.

* Moved string-based matchers to Hamcrest_Text package.
  StringContains, StringEndsWith, StringStartsWith, and SubstringMatcher

* Hamcrest.php and Hamcrest_Matchers.php are now built from @factory doctags.
  Added @factory doctag to every static factory method.

* Hamcrest_Matchers and Hamcrest.php now import each matcher as-needed.


== Version 0.3.0: Released Jul 26 2010 ==

* Added running count to Hamcrest_MatcherAssert with methods to get and reset it.
  This can be used by unit testing frameworks for reporting.

* Added Hamcrest_Core_HasToString to assert return value of toString() or __toString().

    assertThat($anObject, hasToString('foo'));

* Added Hamcrest_Type_IsScalar to assert is_scalar().
  Matches values of type bool, int, float, double, and string.

    assertThat($count, scalarValue());
    assertThat('foo', scalarValue());

* Added Hamcrest_Collection package.

  - IsEmptyTraversable
  - IsTraversableWithSize

    assertThat($iterator, emptyTraversable());
    assertThat($iterator, traversableWithSize(5));

* Added Hamcrest_Xml_HasXPath to assert XPath expressions or the content of nodes in an XML/HTML DOM.

    assertThat($dom, hasXPath('books/book/title'));
    assertThat($dom, hasXPath('books/book[contains(title, "Alice")]', 3));
    assertThat($dom, hasXPath('books/book/title', 'Alice in Wonderland'));
    assertThat($dom, hasXPath('count(books/book)', greaterThan(10)));

* Added aliases to match the Java API.

    hasEntry() -> hasKeyValuePair()
    hasValue() -> hasItemInArray()