@@ -1,6 +1,6 @@
 == Version 1.0.0: Not Released ==
 
-Issues Fixed: 119, 136, 139
+Issues Fixed: 119, 136, 139, 141
 
 * Moved hamcrest.php into hamcrest folder and renamed to Hamcrest.php.
   This is more in line with PEAR packaging standards.
@@ -18,7 +18,8 @@ Issues Fixed: 119, 136, 139
 * Hamcrest.php and Hamcrest_Matchers.php are now built from @factory doctags.
   Added @factory doctag to every static factory method.
 
-* Hamcrest_Matchers and Hamcrest.php now import each matcher as-needed.
+* Hamcrest_Matchers and Hamcrest.php now import each matcher as-needed
+  and Hamcrest.php calls the matchers directly instead of Hamcrest_Matchers.
 
 
 == Version 0.3.0: Released Jul 26 2010 ==
